--- a/css/custom.css
+++ b/css/custom.css
@@ -87,10 +87,22 @@ a:hover {
 
 .profile-pic {
   border-radius: 50%;
-  width: 130px;
-  height: 130px;
+  width: 150px;
+  height: 150px;
   object-fit: cover;
   margin-right: 20px
+}
+
+.project {
+  border-bottom: 1px solid #e3e3e3;
+  padding: 10px;
+  margin: 10px 0;
+}
+
+.project .big {
+  text-transform: uppercase;
+  margin-left: 20px;
+
 }
 
 .address {
@@ -154,14 +166,16 @@ a:hover {
   padding: 2px
 }
 
-.main .btn {
+.main .link {
   font-size: 12px;
   text-transform: uppercase;
-  margin: 1px 0 1px 30px;
+  margin-left: 90%;
   color: var(--green);
-  background-color: transparent;
-  border: none;
-  border-radius: 25px
+}
+
+.link .fas {
+  font-size: 12px;
+  color: var(--green);
 }
 
 @media screen and (max-width:991px) {
@@ -184,202 +198,12 @@ a:hover {
   .main .small {
     padding: 0
   }
-
-  .address {
-    margin: 10px 0;
-    font-size: 12px
-  }
-}
-
-body,
-p,
-ul {
-  margin: 0
-}
-
-a,
-a:hover {
-  text-decoration: none
-}
-
-.big,
-.small {
-  font-weight: 700;
-  text-transform: capitalize
-}
-
-body {
-  font-family: Roboto, sans-serif;
-  height: 160vh;
-  background-color: #eee
-}
-
-:root {
-  --green: #00bcd4;
-  --blue: rgb(0, 40, 86);
-  --gray: #999;
-  --white: #fff
-}
-
-ul {
-  padding: 0
-}
-
-a {
-  color: var(--white)
-}
-
-a:hover {
-  color: var(--gray)
-}
-
-.big {
-  font-size: 14px
-}
-
-.small {
-  font-size: 12px
-}
-
-.content-title,
-.header {
-  text-transform: uppercase
-}
-
-.header {
-  background: var(--green);
-  padding: 40px 0 150px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  color: rgba(255, 255, 255, .9)
-}
-
-.inline {
-  display: flex;
-  justify-content: space-between;
-  align-items: center
-}
-
-.inline-icon {
-  display: flex;
-  justify-content: flex-start;
-  padding: 10px 0 0
-}
-
-.fas {
-  color: var(--blue);
-  padding: 4px 10px 0 0;
-  font-size: 16px
-}
-
-.title {
-  font-weight: 400;
-  font-family: Pavanam, sans-serif
-}
-
-.profile-pic {
-  border-radius: 50%;
-  width: 130px;
-  height: 130px;
-  object-fit: cover;
-  margin-right: 20px
-}
-
-.address {
-  text-align: right
-}
-
-.section-col {
-  padding: 20px 0
-}
-
-.box {
-  margin-top: -100px;
-  box-shadow: 1px 5px 10px var(--gray);
-  background-color: var(--white);
-  padding: 20px;
-  margin-bottom: 60px
-}
-
-.content-title {
-  color: var(--green);
-  font-weight: 700;
-  font-size: 16px
-}
-
-.side-details a {
-  color: var(--blue)
-}
-
-.social-icons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-top: 1px solid #eee;
-  padding-top: 15px
-}
-
-.social-icons .fab {
-  padding: 10px;
-  border-radius: 10px;
-  margin: 3px;
-  font-size: 24px;
-  color: rgba(0, 40, 86)
-}
-
-.social-icons .fab:hover {
-  color: #5593da;
-  transform: scaleX(2px);
-  transition: all .2s linear
-}
-
-.main .small {
-  padding-left: 20px;
-  text-transform: initial
-}
-
-.main .fas {
-  padding: 2px 10px 0 0
-}
-
-.main .btn .fas {
-  padding: 2px
-}
-
-.main .btn {
-  font-size: 12px;
-  text-transform: uppercase;
-  margin: 1px 0 1px 30px;
-  color: var(--green);
-  background-color: transparent;
-  border: none;
-  border-radius: 25px
-}
-
-@media screen and (max-width:991px) {
-
-  .address,
-  .inline {
-    text-align: center
-  }
-
-  .inline {
-    flex-wrap: wrap;
-    justify-content: center;
-    letter-spacing: 1.2px
-  }
-
-  .profile-pic {
-    margin-bottom: 20px
-  }
-
-  .main .small {
-    padding: 0
+  .main .link {
+    margin: 0;
   }
 
   .address {
     margin: 10px 0;
     font-size: 12px
   }
-}body,p,ul{margin:0}a,a:hover{text-decoration:none}.big,.small{font-weight:700;text-transform:capitalize}body{font-family:Roboto,sans-serif;height:160vh;background-color:#eee}:root{--green:#00bcd4;--blue:rgb(0, 40, 86);--gray:#999;--white:#fff}ul{padding:0}a{color:var(--white)}a:hover{color:var(--gray)}.big{font-size:14px}.small{font-size:12px}.content-title,.header{text-transform:uppercase}.header{background:var(--green);padding:40px 0 150px;display:flex;justify-content:space-around;align-items:center;color:rgba(255,255,255,.9)}.inline{display:flex;justify-content:space-between;align-items:center}.inline-icon{display:flex;justify-content:flex-start;padding:10px 0 0}.fas{color:var(--blue);padding:4px 10px 0 0;font-size:16px}.title{font-weight:400;font-family:Pavanam,sans-serif}.profile-pic{border-radius:50%;width:130px;height:130px;object-fit:cover;margin-right:20px}.address{text-align:right}.section-col{padding:20px 0}.box{margin-top:-100px;box-shadow:1px 5px 10px var(--gray);background-color:var(--white);padding:20px;margin-bottom:60px}.content-title{color:var(--green);font-weight:700;font-size:16px}.side-details a{color:var(--blue)}.social-icons{display:flex;justify-content:center;align-items:center;border-top:1px solid #eee;padding-top:15px}.social-icons .fab{padding:10px;border-radius:10px;margin:3px;font-size:24px;color:rgba(0,40,86)}.social-icons .fab:hover{color:#5593da;transform:scaleX(2px);transition:all .2s linear}.main .small{padding-left:20px;text-transform:initial}.main .fas{padding:2px 10px 0 0}.main .btn .fas{padding:2px}.main .btn{font-size:12px;text-transform:uppercase;margin:1px 0 1px 30px;color:var(--green);background-color:transparent;border:none;border-radius:25px}@media screen and (max-width:991px){.address,.inline{text-align:center}.inline{flex-wrap:wrap;justify-content:center;letter-spacing:1.2px}.profile-pic{margin-bottom:20px}.main .small{padding:0}.address{margin:10px 0;font-size:12px}}
+}
